# crk

./: .gitmodules  CMakeLists.txt
crk/: com.h  dict.c  dict.h  gfx.h  gfx_gl_internal.h  gfx_gl_shader.c  io.h  io_internal.c  io_internal.h  io_memstream.c  math.h  mem.c  mem.h  memstream.c  memstream.h  res.h  tabula.c  tabula.h  thread.h  thread_internal.h  thread_pthread.c
crk/com/: defs.h  types.h
crk/file/: reg.h
crk/gfx/: front.h  front.hh  types.hh
crk/gfx/impl/: front.cpp
crk/gfx/impl/opengl/: generic_mdl.hh  material.hh  renderer.hh  shader.hh
crk/io/: front.h  types.h
crk/io/impl/: front.cpp
crk/mem/: allocator.h  front.h  types.h
crk/mem/impl/: front.cpp
crk/res/: front.h  types.h  types.hh
crk/res/impl/: front.cpp
crk/snd/: front.h  types.h
crk/std/: map.h  string.h  vector.h
crk/util/: memstream.h  refcounted.h  tabula.h  tok.h
crk/util/impl/: memstream.cpp  tabula.cpp
crk/utl/: memstream.h  tabula.h
crk/utl/impl/: memstream.cpp  tabula.cpp
